--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 <body>
   <nav>
     <ul>
-      <li><a href=""><img src="\IMAGE\logo.png" alt=""></a></li>
+      <li><a href=""><img src="\IMAGE\logo.png" alt="" width="70"></a></li>
       <li><a href="">
           <h2>npm is now a part of GitHub</h2>
         </a></li>
-      <li><a href=""><img src="\IMAGE\cat1.png" alt="" /></a></li>
+      <li><a href=""><img src="\IMAGE\cat1.png" alt="" width="50" /></a></li>
     </ul>
   </nav>
   <header class="bg1">
     <div id="black-heart-line">
       <ul>
-        <li><img src="\IMAGE\black-heart.png" alt="" width="35"></li>
-        <li><a href="">Now With Partition Management</a></li>
+        <li class="row"><img src="\IMAGE\black-heart.png" alt="" width="35"></li>
+        <li class="row"><a href="">Now With Partition Management</a></li>
         <li><a href="">Products</a></li>
         <li><a href="">Pricing</a></li>
         <li><a href="">Documentation</a></li>
@@ -45,34 +45,35 @@
       <p>We're npm, Inc., the company behind Node package manager, the npm Registry, and npm CLI. We offer those to the
         community for free, but our day job is building and selling useful tools for developers like you.</p>
       <h2>Take your JavaScript development up a notch</h2>
-      <p>Get started today for free, or step up to npm Pro to enjoy a premium JavaScript development experience, with
-        features like private packages.</p>
-      <input type="button" value="Sign up for free">
-      <input type="button" value="Learn about pro">
+      <h4>Get started today for free, or step up to npm Pro to enjoy a premium JavaScript development experience, with
+        features like private packages.</h4>
+      <input class="input" id="in1" type="button" value="Sign up for free">
+      <input class="input" id="in2" type="button" value="Learn about pro">
     </div>
   </section>
   <section class="bubble">
-    <div>
+    <div id="home">
       <ul>
         <li><img src="\IMAGE\bubble.png" alt=""></li>
-        <li>Bring the best of open source to you, your team, and your company</li>
-        <li>Relied upon by more than 11 million developers worldwide, npm is committed to making JavaScript development
+        <h2>Bring the best of open source to you, your team, and your company</h2>
+        <li id="bol">Relied upon by more than 11 million developers worldwide, npm is committed to making JavaScript
+          development
           elegant, productive, and safe. The free npm Registry has become the center of JavaScript code sharing, and
           with more than one million packages, the largest software registry in the world. Our other tools and services
           take the Registry, and the work you do around it, to the next level.</li>
       </ul>
     </div>
-    <div>
+    <div id="home2">
 
       <article>
         <img src="\IMAGE\article1.png" alt="" />
         <h4>npm Free</h4>
         <p>Become a contributing member of the open source JavaScript community.
           Create public packages, publish updates, audit your dependencies, and more.</p>
-        <input type="button" value="LEARN MORE">
+        <input class="in" type="button" value="LEARN MORE">
       </article>
       <article>
-        <ul>
+        <ul id="separate">
           <li><img src="\IMAGE\article2.png" alt="" /></li>
           <li><img src="\IMAGE\article5.png" alt="" /></li>
         </ul>
@@ -80,7 +81,7 @@
         <p>For next-level JavaScript developers who want more capabilities.
           Pro and Teams add the ability to build private packages for you, your team,
           or for customers.</p>
-        <input type="button" value="LEARN MORE">
+        <input class="in" type="button" value="LEARN MORE">
       </article>
       <article>
         <img src="\IMAGE\article3.png" alt="" />
@@ -88,7 +89,7 @@
         <p>For very large teams and business-critical projects,
           npm Enterprise delivers features that organizations with hundreds of developers need,
           like SSO and enhanced security.</p>
-        <input type="button" value="LEARN MORE">
+        <input class="in" type="button" value="LEARN MORE">
       </article>
       <article>
         <img src="\IMAGE\article4.png" alt="" />
@@ -96,13 +97,13 @@
         <p>Our security team's unique insights into JavaScript
           vulnerabilities and threats are delivered as free and premium features,
           as well as services for resellers and others.</p>
-        <input type="button" value="LEARN MORE">
+        <input class="in" type="button" value="LEARN MORE">
       </article>
     </div>
   </section>
   <section id="bg3">
     <div>
-      <p>We ❤ open source</p>
+      <h3>We ❤ open source</h3>
       <br>
       <p>At npm, Inc., we're proud to dedicate teams of full-time employees to operating
         the npm Registry, enhancing the CLI, improving JavaScript security,
@@ -116,46 +117,46 @@
     </div>
   </section>
   <hr>
-  <footer>
-    <article><img src="\IMAGE\logo2.png" alt="" width="80" /></article>
-    <article>
-      <h4>Help</h4>
-      <ul>
-        <li>Documantation</li>
-        <li>Community</li>
-        <li>Case studies</li>
-        <li>Advisories</li>
-        <li>Status</li>
-        <li>Contact</li>
-      </ul>
-    </article>
+  <footer id="foot">
+    <div>
+      <article><img src="\IMAGE\logo2.png" alt="" width="80" /></article>
+      <article>
+        <h4>Help</h4>
+        <ul>
+          <li>Documantation</li>
+          <li>Community</li>
+          <li>Case studies</li>
+          <li>Advisories</li>
+          <li>Status</li>
+          <li class="pad">Contact</li>
+        </ul>
+      </article>
 
 
-    <article>
-      <h4>About</h4>
-      <ul>
-        <li>Company</li>
-        <li>Blog</li>
-        <li>Careers</li>
-        <li>Webiners</li>
-        <lipress>
-          </li>
-          <li>Newsletter</li>
-      </ul>
-    </article>
+      <article>
+        <h4>About</h4>
+        <ul>
+          <li>Company</li>
+          <li>Blog</li>
+          <li>Careers</li>
+          <li>Webiners</li>
+          <li>press</li>
+          <li class="pad">Newsletter</li>
+        </ul>
+      </article>
 
 
-    <article>
-      <h4>Terms & Policies</h4>
-      <ul>
-        <li>Policies</li>
-        <li>Terms of use</li>
-        <li>Code of conduct</li>
-        <li>Privacy</li>
-      </ul>
-    </article>
+      <article>
+        <h4>Terms & Policies</h4>
+        <ul>
+          <li>Policies</li>
+          <li>Terms of use</li>
+          <li>Code of conduct</li>
+          <li class="pad">Privacy</li>
+        </ul>
+      </article>
 
-
+    </div>
   </footer>
 </body>
 
