--- a/index.html
+++ b/index.html
@@ -34,25 +34,37 @@
       </ul>
       <hr>
     </div>
-    <div class="header3">
-      <ul>
-        <li><a href="#"><img src="\IMAGE\logo.png" alt=""></a></li>
-        <div id="header2">
-          <li class="sbox"><input id="search-box" type="text" placeholder="Search Packages"></li>
-          <li class="sbox"><input id="search-button" type="button" value="Search"></li>
-        </div>
-        <li><input id="sign-button" type="button" value="Sign Up"></li>
-        <li><a href="" class="remove-underline">Sign In</a></li>
-      </ul>
+
+    <div id="space">
+      <article>
+        <a href="#"><img src="\IMAGE\logo.png" alt="" id="one"></a>
+      </article>
+
+      <article>
+        <input id="search-box" type="text" placeholder="Search Packages">
+      </article>
+      <article>
+        <input id="search-button" type="button" value="Search">
+      </article>
+      <article>
+        <input id="sign-button" type="button" value="Sign Up">
+      </article>
+
+      <article>
+        <input id="sign-in" type="button" value="Sign In">
+      </article>
     </div>
+
   </header>
   <section class="bg2">
     <div>
       <h1>Build amazing things</h1>
-      <p>We're npm, Inc., the company behind Node package manager, the npm Registry, and npm CLI. We offer those to the
+      <p>We're npm, Inc., the company behind Node package manager, the npm Registry, and npm CLI. We offer those to
+        the
         community for free, but our day job is building and selling useful tools for developers like you.</p>
       <h2>Take your JavaScript development up a notch</h2>
-      <p>Get started today for free, or step up to npm Pro to enjoy a premium JavaScript development experience, with
+      <p>Get started today for free, or step up to npm Pro to enjoy a premium JavaScript development experience,
+        with
         features like private packages.</p>
       <input class="input" id="in1" type="button" value="Sign up for free">
       <input class="input" id="in2" type="button" value="Learn about pro">
@@ -63,10 +75,13 @@
       <ul>
         <li><img src="\IMAGE\bubble.png" alt=""></li>
         <h2>Bring the best of open source to you, your team, and your company</h2>
-        <li id="bol">Relied upon by more than 11 million developers worldwide, npm is committed to making JavaScript
+        <li id="bol">Relied upon by more than 11 million developers worldwide, npm is committed to making
+          JavaScript
           development
-          elegant, productive, and safe. The free npm Registry has become the center of JavaScript code sharing, and
-          with more than one million packages, the largest software registry in the world. Our other tools and services
+          elegant, productive, and safe. The free npm Registry has become the center of JavaScript code sharing,
+          and
+          with more than one million packages, the largest software registry in the world. Our other tools and
+          services
           take the Registry, and the work you do around it, to the next level.</li>
       </ul>
     </div>
