--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li><a href=""><img src="\IMAGE\cat1.png" alt="" width="50" /></a></li>
     </ul>
   </nav>
+  <h1>SUSMITA</h1>
   <header class="bg1">
     <div id="black-heart-line">
       <ul>
